# app-keyword-explorer

./: .flake8  .gitignore  .python-version  README.md  test.py
explorer/: keywords.txt  keywords_2022-08-01_19:54:46.json  main.py  main_ranking.py  pipeline.py  pyproject.toml  store_api.py
explorer/augmenters/: __init__.py  app_metadata_keyword_augmenter.py  app_reviews_keyword_augmenter.py  augmenter.py  glove_keyword_augmenter.py  store_suggestion_keyword_augmenter.py
explorer/clients/: __init__.py  store_api.py
explorer/keywords/: __init__.py  extractor.py  yake_keyword_extractor.py
explorer/models/: __init__.py  app.py  keyword.py  review.py  stores.py
explorer/processors/: __init__.py  deduplicator.py  processor.py  ranking_processor.py  relevancy_processor.py  spacy_lemmatizer.py  store_ranking_processor.py
explorer/tests/: deduplicator_test.py  ranker_test.py
explorer/utils/: __init__.py  ranker.py
scraper/: .eslintrc.js  .prettierrc.js  nodemon.json  package-lock.json  package.json  tsconfig.json
scraper/dev/: docker-compose.yml
scraper/src/: index.ts
scraper/src/middlewares/: error.ts  index.ts  notFound.ts  requestLogger.ts  validator.ts
scraper/src/routes/: store.ts
scraper/src/services/: StoreService.ts
scraper/src/stores/: AppStore.ts  CachedProxyStore.ts  FakeStore.ts  IStore.ts  PlayStore.ts  RateLimitingProxyStore.ts  Store.ts  index.ts
scraper/src/types/: App.ts  ListCategory.ts  ListCollection.ts  Review.ts  StoreCountry.ts  StoreType.ts
scraper/src/types/express/: index.d.ts
scraper/src/utils/: cache.ts  logger.ts
(+18 files in other folders)
